--- a/src/styles.css
+++ b/src/styles.css
@@ -12,8 +12,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
+  overflow: auto;
   margin: 0;
   padding: 0;
   background: linear-gradient(
@@ -22,6 +23,10 @@ body {
     var(--secondaryColor) 49%,
     var(--tertiaryColor) 100%
   );
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 h1 {
@@ -58,13 +63,23 @@ button:hover {
   color: var(--quinaryColor);
 }
 
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+}
+
 #container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 1200px;
+  height: auto;
+  width: 80%;
+  margin: 0;
 }
 
 #header {
@@ -79,13 +94,32 @@ button:hover {
 
 #hero {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
 }
 
 #hero img {
   border-radius: 20px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--quinaryColor);
+  border-radius: 20px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
+  color: var(--tertiaryColor);
+  height: 400px;
+  width: 400px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
