--- a/src/styles.css
+++ b/src/styles.css
@@ -18,20 +18,21 @@ body {
   margin: 0;
   padding: 0;
   background: linear-gradient(
-    45deg,
-    var(--primaryColor) 0%,
-    var(--secondaryColor) 49%,
+    135deg,
+    black 0%,
+    var(--primaryColor) 49%,
     var(--tertiaryColor) 100%
   );
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  scroll-behavior: smooth;
 }
 
 h1 {
   color: var(--quinaryColor);
-  font-size: 5rem;
+  font-size: 3rem;
   margin: 0;
 }
 
@@ -45,9 +46,22 @@ nav ul {
   justify-content: space-between;
   align-items: center;
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-button {
+li a {
+  color: var(--quinaryColor);
+  font-size: 1.5rem;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+}
+
+li a:hover {
+  color: var(--primaryColor);
+}
+
+/* button {
   background-color: var(--primaryColor);
   border: 1px solid var(--primaryColor);
   border-radius: 5px;
@@ -61,7 +75,7 @@ button:hover {
   background-color: var(--secondaryColor);
   border: 1px solid var(--secondaryColor);
   color: var(--quinaryColor);
-}
+} */
 
 section {
   display: flex;
