--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,10 @@ h1 {
   margin: 0;
 }
 
+h3 {
+  margin: 0;
+}
+
 nav {
   width: 100%;
 }
@@ -61,21 +65,12 @@ li a:hover {
   color: var(--primaryColor);
 }
 
-/* button {
-  background-color: var(--primaryColor);
-  border: 1px solid var(--primaryColor);
-  border-radius: 5px;
-  color: var(--text-color);
-  cursor: pointer;
-  font-size: 1.5rem;
-  padding: 0.5rem 1rem;
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
-button:hover {
-  background-color: var(--secondaryColor);
-  border: 1px solid var(--secondaryColor);
-  color: var(--quinaryColor);
-} */
 
 section {
   display: flex;
@@ -84,6 +79,7 @@ section {
   align-items: center;
   min-height: 100vh;
   width: 100%;
+  border: 1px solid red;
 }
 
 #container {
@@ -132,8 +128,26 @@ section {
 
 .card-container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+}
+
+.form-container {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+.form-container div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  background-color: var(--quinaryColor);
+  height: 250px;
+  width: 200px;
+  border-radius: 10px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
+  padding: 1rem;
 }
