--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,6 @@
   --tertiaryColor: #8697c4;
   --quarternaryColor: #adbbda;
   --quinaryColor: #ede8f5;
-  --text-color: var(--tertiaryColor);
 }
 
 html,
@@ -70,6 +69,15 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
+}
+
+input {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: var(--secondaryColor);
+  color: white;
 }
 
 section {
@@ -111,19 +119,29 @@ section {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
 }
 
+#errorDisplay {
+  display: none;
+  color: red;
+}
+
 .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--quinaryColor);
-  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
   color: var(--tertiaryColor);
-  height: 400px;
-  width: 400px;
+  height: 300px;
+  width: 300px;
   margin: 10px;
   padding: 10px;
+  overflow: hidden;
+}
+
+.card img {
+  border-radius: 10px;
 }
 
 .card-container {
@@ -139,14 +157,14 @@ section {
   justify-content: center;
   align-items: center;
 }
+
 .form-container div {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  background-color: var(--quinaryColor);
-  height: 250px;
-  width: 200px;
+  background-color: rgba(255, 255, 255, 0.5);
+  height: 300px;
   border-radius: 10px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
   padding: 1rem;
