--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,14 @@ body {
   background-position: top center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  color: black;
   scroll-behavior: smooth;
+}
+
+button {
+  cursor: pointer;
+  margin: 1rem;
+  min-width: 6rem;
 }
 
 h1 {
@@ -36,7 +43,9 @@ h1 {
 }
 
 h3 {
-  margin: 0;
+  margin: 0.5rem;
+
+  color: black;
 }
 
 nav {
@@ -131,21 +140,26 @@ section {
 .card {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
-  color: var(--tertiaryColor);
-  height: 300px;
+  height: 400px;
   width: 300px;
-  margin: 10px;
-  padding: 10px;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.1);
 }
 
 .card img {
-  border-radius: 10px;
+  width: 100%;
+  height: 200px;
 }
 
 .card-container {
@@ -153,6 +167,7 @@ section {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  gap: 2rem;
 }
 
 .form-container {
@@ -172,4 +187,10 @@ section {
   border-radius: 10px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
   padding: 1rem;
+}
+
+.textArea p {
+  padding: 0 1rem 1rem;
+  text-align: center;
+  height: 3rem;
 }
