--- a/src/styles.css
+++ b/src/styles.css
@@ -143,23 +143,26 @@ section {
   justify-content: space-between;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 10px;
+  border-radius: 1rem;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
-  height: 400px;
-  width: 300px;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  transition: transform 0.3s ease-in-out;
 }
 
-.card:hover {
-  transform: scale(1.1);
+.feature-size {
+  height: 400px;
+  width: 300px;
+}
+
+.testimonial-size {
+  height: 300px;
+  width: 300px;
 }
 
 .card img {
   width: 100%;
-  height: 200px;
+  height: 50%;
 }
 
 .card-container {
@@ -168,6 +171,14 @@ section {
   align-items: center;
   flex-wrap: wrap;
   gap: 2rem;
+}
+
+.magnify {
+  transition: transform 0.3s ease-in-out;
+}
+
+.magnify:hover {
+  transform: scale(1.1);
 }
 
 .form-container {
