--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,8 @@
   --tertiaryColor: #8697c4;
   --quarternaryColor: #adbbda;
   --quinaryColor: #ede8f5;
+  --card-background: rgba(0, 0, 0, 0.5);
+  --box-shadow: 0 8px 16px 0 rgba(0, 0, 150, 0.5);
 }
 
 html,
@@ -32,6 +34,11 @@ body {
 
 button {
   cursor: pointer;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid var(--quarternaryColor);
+  background-color: var(--card-background);
+  color: white;
   margin: 1rem;
   min-width: 6rem;
 }
@@ -44,8 +51,6 @@ h1 {
 
 h3 {
   margin: 1rem;
-
-  color: black;
 }
 
 nav {
@@ -84,8 +89,8 @@ form {
 input {
   padding: 0.5rem;
   border-radius: 0.5rem;
-  border: none;
-  background-color: var(--secondaryColor);
+  border: 1px solid var(--quarternaryColor);
+  background-color: var(--card-background);
   color: white;
 }
 
@@ -124,9 +129,10 @@ section {
 
 #hero img {
   border-radius: 20px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: var(--box-shadow);
   margin: 1rem;
   cursor: pointer;
+  border: 1px solid var(--quarternaryColor);
 }
 
 #errorDisplay {
@@ -135,31 +141,34 @@ section {
 }
 
 .active {
-  background-color: var(--secondaryColor);
+  background-color: var(--card-background);
   border-radius: 1rem;
 }
 
 .card {
   display: flex;
   flex-direction: column;
+  text-align: center;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.5);
+  color: white;
+  background-color: var(--card-background);
   border-radius: 1rem;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
+  border: 1px solid var(--quarternaryColor);
+  box-shadow: var(--box-shadow);
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
 
 .feature-size {
-  height: 400px;
-  width: 300px;
+  height: 24rem;
+  width: 17rem;
 }
 
 .testimonial-size {
-  height: 300px;
-  width: 300px;
+  height: 20rem;
+  width: 20rem;
 }
 
 .card img {
@@ -180,7 +189,7 @@ section {
 }
 
 .magnify:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .form-container {
@@ -195,11 +204,60 @@ section {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: var(--card-background);
   height: 300px;
   border-radius: 10px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: var(--box-shadow);
   padding: 1rem;
+}
+
+.price {
+  font-weight: bold;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.price-div {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  border-radius: 1rem;
+}
+
+.price-card {
+  padding: 1rem;
+  height: 20rem;
+  width: 14rem;
+  justify-content: left;
+}
+
+.price-div > :nth-child(2) {
+  height: 24rem;
+}
+
+.price-div > :nth-child(2) div h3 {
+  color: var(--primaryColor);
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.price-div > :nth-child(2) div p {
+  color: green;
+  font-weight: bold;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.benefits {
+  padding: 0 1rem 1rem;
+  text-align: center;
+  list-style-type: none;
+  font-size: 1rem;
+}
+
+.benefits li {
+  margin: 0.5rem 0;
 }
 
 .textArea p {
